fix links on mobile

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ header{
 
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap-reverse;
+    flex-wrap: wrap;
     justify-content: flex-start;
     align-items: center;
 }
